tag filtresi yeniden ama yeniden her nasıl kaybolduysa cozemedim, calışır hale getirildi...

--- a/app/templates_for_new_theme/products/product_list.html
+++ b/app/templates_for_new_theme/products/product_list.html
@@ -61,7 +61,7 @@
                     <div class="aa-product-catg-body">
                         <ul class="aa-product-catg">
                             <!-- start single product item -->
-                           {% for product in page_products %}
+                           {% for product in object_list %}
                                {% include "products/single_product.html" with product=product price="True" %}
                            {% endfor %}
                         </ul>
@@ -123,6 +123,7 @@
                     <div class="aa-sidebar-widget">
                         <h3>Etiketler</h3>
                         <div class="tag-cloud">
+                        <form>
                             {% if product_tag_list %}
                                 {% for tag in product_tag_list %}
 {#                                    <a href="{% url 'products:product_list_by_tag' tag.slug %}">{{ tag.name }}</a>#}
@@ -131,9 +132,11 @@
                                     </a>
     {#                            {{ tag.name }}#}
                                 {% endfor %}
-                            {% elif tag %}
-                                <a href="{% url 'products:product_list_by_tag' tag.slug %}">{{ tag.name }}</a>
                             {% endif %}
+                        </form>
+{#                            {% elif tag %}#}
+{#                                <a href="{% url 'products:product_list_by_tag' tag.slug %}">{{ tag.name }}</a>#}
+{#                            {% endif %}#}
                             <a href="#">Fashion</a>
                             <a href="#">Ecommerce</a>
                             <a href="#">Shop</a>
@@ -144,42 +147,45 @@
                         </div>
                     </div>
                     <!-- single sidebar -->
-                    <div class="aa-sidebar-widget">
-                        <h3>Fiyat Aralığı</h3>
-                        <!-- price range -->
-                        <div class="aa-sidebar-price-range">
-                            <form method="GET" action="{% url 'products:products' %}">
-                                <div id="skipstep" class="noUi-target noUi-ltr noUi-horizontal noUi-background">
+                    {% if object_list.count > 1  %}
+                        <div class="aa-sidebar-widget">
+                            <h3>Fiyat Aralığı</h3>
+                            <!-- price range -->
+                            <div class="aa-sidebar-price-range">
+                                <form method="GET" action="{% url 'products:products' %}">
+                                    <div id="skipstep" class="noUi-target noUi-ltr noUi-horizontal noUi-background">
+                                    </div>
+                                    <span id="skip-value-lower" class="example-val">20</span>
+                                    <span id="skip-value-upper" class="example-val">70</span>
+                                    <input id="skip-value-lower-input" type="hidden"
+                                           name="{{ filter_form.min_price.name }}"
+                                           value="{{ filter_form.min_price.value }}">
+                                    <input id="skip-value-upper-input" type="hidden"
+                                           name="{{ filter_form.max_price.name }}"
+                                           value="{{ filter_form.max_price.value }}">
+    {#                                <input type='hidden' name='q' value='{{ request.GET.q }}'/>#}
+    {#                                <input type='submit' value='Apply Filter' class='btn btn-default'>#}
+    {#                                <a href="{% url 'products:products' %}?min_price={{ minimum_price }}&max_price={{ maximum_price }}&{{ request.GET.urlencode }}">#}
+                                    <button id="filter-btn" class="aa-filter-btn" type="submit">Filtrele</button>
+    {#                                </a>#}
+                                </form>
+                                </br>
+                                <div class="row" align="center">
+                                    <a href="{% url 'products:products' %}">
+                                        <button class="aa-filter-btn"
+                                                style="width: 100%; height: 2.2em; font-size: large"
+                                                type="submit">Filtreleri Temizle</button>
+                                    </a>
                                 </div>
-                                <span id="skip-value-lower" class="example-val">20</span>
-                                <span id="skip-value-upper" class="example-val">70</span>
-                                <input id="skip-value-lower-input" type="hidden"
-                                       name="{{ filter_form.min_price.name }}"
-                                       value="{{ filter_form.min_price.value }}">
-                                <input id="skip-value-upper-input" type="hidden"
-                                       name="{{ filter_form.max_price.name }}"
-                                       value="{{ filter_form.max_price.value }}">
-{#                                <input type='hidden' name='q' value='{{ request.GET.q }}'/>#}
-{#                                <input type='submit' value='Apply Filter' class='btn btn-default'>#}
-{#                                <a href="{% url 'products:products' %}?min_price={{ minimum_price }}&max_price={{ maximum_price }}&{{ request.GET.urlencode }}">#}
-                                <button id="filter-btn" class="aa-filter-btn" type="submit">Filtrele</button>
-{#                                </a>#}
-                            </form>
-                            </br>
-                            <div class="row" align="center">
-                                <a href="{% url 'products:products' %}">
-                                    <button class="aa-filter-btn"
-                                            style="width: 100%; height: 2.2em; font-size: large"
-                                            type="submit">Filtreleri Temizle</button>
-                                </a>
+                                <input id='minrange' type="hidden" name="min_price" value="{{ minimum_price }}">
+                                <input id='maxrange' type="hidden" name="max_price" value="{{ maximum_price }}">
+                                <input id='minsetvalue' type="hidden" name="minimum_set_price_value" value="{{ minimum_set_price_value }}">
+                                <input id='maxsetvalue' type="hidden" name="maximum_set_price_value" value="{{ maximum_set_price_value }}">
                             </div>
-                            <input id='minrange' type="hidden" name="min_price" value="{{ minimum_price }}">
-                            <input id='maxrange' type="hidden" name="max_price" value="{{ maximum_price }}">
-                            <input id='minsetvalue' type="hidden" name="minimum_set_price_value" value="{{ minimum_set_price_value }}">
-                            <input id='maxsetvalue' type="hidden" name="maximum_set_price_value" value="{{ maximum_set_price_value }}">
-                        </div>
 
-                    </div>
+                        </div>
+                    {% endif %}
+
 {#                    <!-- single sidebar -->#}
 {#                    <div class="aa-sidebar-widget">#}
 {#                        <div class="">#}
