Thunail creator olarak 2 farklı algoritma geliştirildi. İlki resmi crop ediyor, ancak bu durumda, aspect 'i kötü olan resimler, kırpılıyor, bu da resimde kayba yol açıyor. Diğer algoritmada ise resim olması gerekan aspect ratioya sahip yeni bir resim içerisine paste ediliyor. Bu durumda, da aspect ration artık olması gerektiği gibi olduğundan kesmeye gerek kalmıyor.

--- a/app/templates_for_new_theme/products/home_page_products.html
+++ b/app/templates_for_new_theme/products/home_page_products.html
@@ -21,7 +21,7 @@
                                     <ul class="aa-product-catg"
 
                                        {% for product in products %}
-                                           {% include "products/single_product.html" with product=product price="True" %}
+                                           {% include "products/_single_product.html" with product=product price="True" %}
                                        {% endfor %}
                                     </ul>
                                     <a class="aa-browse-btn" href="/products">TÜMÜNE GÖZAT <span
@@ -29,7 +29,7 @@
                                 </div>
 
                             </div>
-                            {% include "products/quick_view_modal.html" %}
+                            {% include "products/_quick_view_modal.html" %}
                         </div>
                     </div>
                 </div>
