--- a/app/templates_for_new_theme/products/home_page_selected_products.html
+++ b/app/templates_for_new_theme/products/home_page_selected_products.html
@@ -24,7 +24,7 @@
                                 <ul class="aa-product-catg aa-popular-slider">
                                     <!-- start single product item -->
                                     {% for product in products2 %}
-                                        {% include "products/single_product.html" with product=product price="True" %}
+                                        {% include "products/_single_product.html" with product=product price="True" %}
                                     {% endfor %}
 
                                 </ul>
