sessions kullanarak son ziyaret edilen 3 ürünü göstermeyi başardım. şimdi aynı ürnülerin eklenmesini engellemem gerek.

--- a/app/templates_for_new_theme/products/_sidebar.html
+++ b/app/templates_for_new_theme/products/_sidebar.html
@@ -137,6 +137,13 @@
                                     </div>
                                 </li>
                             </ul>
+                            <ul>
+                                {% for product in request.session.last_visited_item_list %}
+                                    <li>
+                                    <a href="#" class="aa-cartbox-img">{{ product.title }}</a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
                         </div>
                     </div>
                     <!-- single sidebar -->
