--- a/app/templates_for_new_theme/products/product_list.html
+++ b/app/templates_for_new_theme/products/product_list.html
@@ -61,7 +61,7 @@
                     <div class="aa-product-catg-body">
                         <ul class="aa-product-catg">
                             <!-- start single product item -->
-                           {% for product in object_list %}
+                           {% for product in page_products %}
                                {% include "products/_single_product.html" with product=product price="True" %}
                            {% endfor %}
                         </ul>
