product_detail sayfası ile ilgili çalışmalar başladı. quick view modal formu javascript olmadan çalışacak hale getirildi.

--- a/app/templates_for_new_theme/products/_single_product.html
+++ b/app/templates_for_new_theme/products/_single_product.html
@@ -29,15 +29,16 @@
         <a href="#" data-toggle2="tooltip" data-placement="top"
            title="Quick View" data-toggle="modal"
            data-target="#quick-view-modal"
-           data-title="{{ product.title }}"
-           data-url="{{ product.get_absolute_url }}"
-           data-description="{{ product.description|truncatechars:200}}"
-           data-imagehd = '{{ product|get_thumbnail:"hd"}}'
-           data-imagesd = '{{ product|get_thumbnail:"sd"}}'
-           data-imagemedium = '{{ product|get_thumbnail:"medium"}}'
-           data-imagemicro = '{{ product|get_thumbnail:"micro"}}'
-           data-category = "{{ product.get_main_category }}"
-           data-category_url = "{{ product.get_main_category.get_absolute_url }}"
+{#           data-title="{{ product.title }}"#}
+{#           data-price="{{ product.price }}"#}
+{#           data-url="{{ product.get_absolute_url }}"#}
+{#           data-description="{{ product.description|truncatechars:200}}"#}
+{#           data-imagehd = '{{ product|get_thumbnail:"hd"}}'#}
+{#           data-imagesd = '{{ product|get_thumbnail:"sd"}}'#}
+{#           data-imagemedium = '{{ product|get_thumbnail:"medium"}}'#}
+{#           data-imagemicro = '{{ product|get_thumbnail:"micro"}}'#}
+{#           data-category = "{{ product.get_main_category }}"#}
+{#           data-category_url = "{{ product.get_main_category.get_absolute_url }}"#}
         ><span class="fa fa-search"></span></a>
     </div>
     <!-- product badge -->
