--- a/app/templates_for_new_theme/products/product_detail.html
+++ b/app/templates_for_new_theme/products/product_detail.html
@@ -114,7 +114,12 @@
                                     <h3>{{ object.title }}</h3>
                                     <div class="aa-price-block">
                                         <span class="aa-product-view-price" id='price'>
-                                            {{ object.variation_set.first.price }} ,-₺
+                                            {% if object.variation_set.first.sale_price %}
+                                                {{ object.variation_set.first.sale_price }}
+                                                <small class='og-price'>{{ object.variation_set.first.price }}</small>
+                                            {% else %}
+                                                {{ object.variation_set.first.price }}
+                                            {% endif %} ,-₺
                                         </span>
                                         <p class="aa-product-avilability">Stok Durumu: <span>10+</span></p>
                                     </div>
@@ -177,13 +182,13 @@
                                             </select>
                                         </form>
                                         <p class="aa-prod-category">
-                                            Category: <a href="#">Polo T-Shirt</a>
+                                            Kategori: <a href="{{ product.get_main_category.get_absolute_url }}">{{ product.get_main_category }}</a>
                                         </p>
                                     </div>
                                     <div class="aa-prod-view-bottom">
-                                        <a class="aa-add-to-cart-btn" href="#">Add To Cart</a>
-                                        <a class="aa-add-to-cart-btn" href="#">Wishlist</a>
-                                        <a class="aa-add-to-cart-btn" href="#">Compare</a>
+                                        <a class="aa-add-to-cart-btn" href="#">Sepete At</a>
+{#                                        <a class="aa-add-to-cart-btn" href="#">Wishlist</a>#}
+{#                                        <a class="aa-add-to-cart-btn" href="#">Compare</a>#}
                                     </div>
                                 </div>
                             </div>
@@ -191,8 +196,8 @@
                     </div>
                     <div class="aa-product-details-bottom">
                         <ul class="nav nav-tabs" id="myTab2">
-                            <li><a href="#description" data-toggle="tab">Description</a></li>
-                            <li><a href="#review" data-toggle="tab">Reviews</a></li>
+                            <li><a href="#description" data-toggle="tab">Ürün Tanımı</a></li>
+
                         </ul>
 
                         <!-- Tab panes -->
@@ -200,114 +205,13 @@
                             <div class="tab-pane fade in active" id="description">
                                 <p>{{ object.description }}</p>
                             </div>
-                            <div class="tab-pane fade " id="review">
-                                <div class="aa-product-review-area">
-                                    <h4>2 Reviews for T-Shirt</h4>
-                                    <ul class="aa-review-nav">
-                                        <li>
-                                            <div class="media">
-                                                <div class="media-left">
-                                                    <a href="#">
-                                                        <img class="media-object" src="img/testimonial-img-3.jpg"
-                                                             alt="girl image">
-                                                    </a>
-                                                </div>
-                                                <div class="media-body">
-                                                    <h4 class="media-heading"><strong>Marla Jobs</strong> - <span>March 26, 2016</span>
-                                                    </h4>
-                                                    <div class="aa-product-rating">
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star-o"></span>
-                                                    </div>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                                </div>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <div class="media">
-                                                <div class="media-left">
-                                                    <a href="#">
-                                                        <img class="media-object" src="img/testimonial-img-3.jpg"
-                                                             alt="girl image">
-                                                    </a>
-                                                </div>
-                                                <div class="media-body">
-                                                    <h4 class="media-heading"><strong>Marla Jobs</strong> - <span>March 26, 2016</span>
-                                                    </h4>
-                                                    <div class="aa-product-rating">
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star"></span>
-                                                        <span class="fa fa-star-o"></span>
-                                                    </div>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                    <h4>Add a review</h4>
-                                    <div class="aa-your-rating">
-                                        <p>Your Rating</p>
-                                        <a href="#"><span class="fa fa-star-o"></span></a>
-                                        <a href="#"><span class="fa fa-star-o"></span></a>
-                                        <a href="#"><span class="fa fa-star-o"></span></a>
-                                        <a href="#"><span class="fa fa-star-o"></span></a>
-                                        <a href="#"><span class="fa fa-star-o"></span></a>
-                                    </div>
-                                    <!-- review form -->
-                                    <form action="" class="aa-review-form">
-                                        <div class="form-group">
-                                            <label for="message">Your Review</label>
-                                            <textarea class="form-control" rows="3" id="message"></textarea>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="name">Name</label>
-                                            <input type="text" class="form-control" id="name" placeholder="Name">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="email">Email</label>
-                                            <input type="email" class="form-control" id="email"
-                                                   placeholder="example@gmail.com">
-                                        </div>
-
-                                        <button type="submit" class="btn btn-default aa-review-submit">Submit</button>
-                                    </form>
-                                </div>
-                            </div>
                         </div>
                     </div>
                     <!-- Related product -->
                     <div class="aa-product-related-item">
-                        <h3>Related Products</h3>
+                        <h3>Benzer Ürünler</h3>
                         <ul class="aa-product-catg aa-related-item-slider">
                             <!-- start single product item -->
-                            <li>
-                                <figure>
-                                    <a class="aa-product-img" href="#"><img src="img/man/polo-shirt-2.png"
-                                                                            alt="polo shirt img"></a>
-                                    <a class="aa-add-card-btn" href="#"><span class="fa fa-shopping-cart"></span>Add To
-                                        Cart</a>
-                                    <figcaption>
-                                        <h4 class="aa-product-title"><a href="#">Polo T-Shirt</a></h4>
-                                        <span class="aa-product-price">$45.50</span><span class="aa-product-price"><del>$65.50</del></span>
-                                    </figcaption>
-                                </figure>
-                                <div class="aa-product-hvr-content">
-                                    <a href="#" data-toggle="tooltip" data-placement="top" title="Add to Wishlist"><span
-                                            class="fa fa-heart-o"></span></a>
-                                    <a href="#" data-toggle="tooltip" data-placement="top" title="Compare"><span
-                                            class="fa fa-exchange"></span></a>
-                                    <a href="#" data-toggle2="tooltip" data-placement="top" title="Quick View"
-                                       data-toggle="modal" data-target="#quick-view-modal"><span
-                                            class="fa fa-search"></span></a>
-                                </div>
-                                <!-- product badge -->
-                                <span class="aa-badge aa-sale" href="#">SALE!</span>
-                            </li>
                             {% for product in related %}
                                 {% include "products/_single_product.html" with product=product price="True" %}
                             {% endfor %}
